name:                hedis-utils
version:             0.3.0
synopsis:            Collection of utilities for working with Redis in Haskell
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Database.Redis.Utils
    Database.Redis.Configurator
    Database.Redis.Yaml

  other-extensions:    RankNTypes, ScopedTypeVariables
  build-depends:
      base            >=4.6 && <4.8
    , bytestring
    , cereal
    , configurator
    , data-default
    , errors
    , hedis           >=0.6 && <0.7
    , network
    , retry           >= 0.5 && < 0.6
    , safe
    , time
    , transformers
    , yaml

    -- temporary dep to get cabal compliant
    , either > 4.3 && < 5

  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      hedis-utils
    , HUnit
    , QuickCheck
    , base
    , bytestring
    , containers
    , derive
    , test-framework
    , test-framework-smallcheck
    , hedis
    , data-default
    , retry
    , smallcheck
    , cereal

  default-language:    Haskell2010
