name:                hedis-utils
version:             0.3.1
synopsis:            Collection of utilities for working with Redis in Haskell
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Database.Redis.Utils
    Database.Redis.Configurator
    Database.Redis.Yaml

  other-extensions:    RankNTypes, ScopedTypeVariables
  build-depends:
      base            >=4.6 && <5
    , bytestring
    , cereal
    , configurator
    , data-default
    , errors          >= 2.0 && <2.3
    , hedis           >=0.6 && <0.10
    , network
    , retry           >= 0.7 && < 0.8
    , safe
    , time
    , transformers
    , yaml

    -- temporary dep to get cabal compliant
    , either > 4.3 && < 5

  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      HUnit
    , QuickCheck
    , async
    , base
    , bytestring
    , cereal
    , containers
    , data-default
    , derive
    , hedis
    , hedis-utils
    , mtl
    , retry
    , smallcheck
    , test-framework
    , test-framework-smallcheck

  default-language:    Haskell2010
