name:                hedis-utils
version:             0.4.0.1
synopsis:            Collection of utilities for working with Redis in Haskell
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman, Michael Xavier
maintainer:          ozgun.ataman@soostone.com
copyright:           Soostone Inc
category:            Database
build-type:          Simple
extra-source-files:
  README.md
  changelog.md
cabal-version:       >=1.10

flag lib-Werror
  default: False
  manual: True

library
  exposed-modules:
    Database.Redis.Utils
    Database.Redis.Configurator
    Database.Redis.Yaml

  other-extensions:    RankNTypes, ScopedTypeVariables
  build-depends:
      base            >=4.6 && <5
    , bytestring
    , cereal
    , configurator
    , errors          >= 2.0
    , hedis           >= 0.6
    , network
    , retry           >= 0.7
    , safe
    , time
    , transformers
    , yaml
    , either > 4.3

  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      HUnit
    , QuickCheck
    , async
    , base
    , bytestring
    , cereal
    , containers
    , data-default
    , hedis
    , hedis-utils
    , mtl
    , retry
    , tasty
    , tasty-hunit
    , tasty-hedgehog >= 0.2.0.0
    , hedgehog

  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall
